--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2,3 +2,5 @@
 en:
   label_issue_checklist_plural: Checklist
   field_checklist: Checklist
+  label_checklist_save_log: Save changes to issue log
+  label_checklist_done_ratio: Set issue done ratio
