--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,3 +2,6 @@
 ru:
   label_issue_checklist_plural: Чеклист
   field_checklist: Чеклист
+  label_checklist_save_log: Сохранять изменения в истории
+  label_checklist_done_ratio: Рассчитывать готовность задачи
+  
